--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,3 @@
-/* Navbar Default Style */
 #navbar {
     background-color: white; /* Default background */
     color: black; /* Default text color */
@@ -6,14 +5,14 @@
 }
 
 #navbar.scrolled {
-    background-color: rgba(255, 255, 255, 0.8); /* Transparan saat di-scroll */
+    background-color: rgba(255, 255, 255, 0.1); /* Transparan saat di-scroll */
     backdrop-filter: blur(0px); /* Blur efek */
-    color: black; /* Ubah teks menjadi hitam */
+    color: white; /* Ubah teks menjadi hitam */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Tambahkan bayangan */
 }
 
 #navbar.scrolled a {
-    color: black;
+    color: white;
 }
 
 .nav-link {
