--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,6 +51,39 @@ html {
     color: gray;
 }
 
+.cursor {
+    display: inline-block;
+    font-weight: bold;
+    animation: blink 0.8s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes flipAnimation {
+    0% {
+        transform: rotateY(90deg);
+        opacity: 0;
+    }
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
+}
+
+.flip-on-load {
+    animation: flipAnimation 1s ease-out forwards;
+}
+
 /* Media query untuk layar kecil (mobile) */
 @media (max-width: 768px) {
     #navbar.scrolled {
